fixed word wrap and destroyed small things

--- a/Forge-Site-v.0.1.0/css/modern-business.css
+++ b/Forge-Site-v.0.1.0/css/modern-business.css
@@ -120,3 +120,12 @@ footer {
         height: 70%;
     }
 }
+
+pre {
+    overflow-x: auto;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    word-break: keep-all;
+ }
